# free-vibe

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod
knowledge/: README.md  business-knowledge-module.md
templates/python-tool/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  alembic.ini  config.yaml  docker-compose.yaml  pyproject.toml
templates/python-tool/.claude/commands/: python-tool-best-practices.md
templates/python-tool/.codex/: README.md
templates/python-tool/.codex/skills/python-tool-best-practices/: SKILL.md
templates/python-tool/knowledge/: business-knowledge-module.md  core-business-data-models.md
templates/python-tool/migrations/: env.py
templates/python-tool/src/__MODULE_NAME__/: config.py
templates/python-tool/src/__MODULE_NAME__/cli/: __init__.py  commands.py
templates/python-tool/src/__MODULE_NAME__/http/: __init__.py  app.py
templates/python-tool/src/__MODULE_NAME__/mcp/: __init__.py  server.py
templates/python-tool/src/__MODULE_NAME__/storage/: __init__.py  db.py  redis.py
templates/python-tool/src/__MODULE_NAME__/tools/: __init__.py  example.py  registry.py
templates/python-tool/tests/: conftest.py
templates/python-tool/tests/tools/: test_example.py
templates/python-web/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  config.yaml  docker-compose.yaml  pyproject.toml
templates/python-web/.claude/commands/: python-web-best-practices.md
templates/python-web/.codex/skills/python-web-best-practices/: SKILL.md
templates/python-web/knowledge/: business-knowledge-module.md  core-business-data-models.md
templates/python-web/migrations/: env.py
templates/python-web/src/__MODULE_NAME__/: config.py  main.py
templates/python-web/src/__MODULE_NAME__/api/: deps.py  router.py
templates/python-web/src/__MODULE_NAME__/storage/: db.py
templates/python-web/tests/: conftest.py
templates/python-web/tests/api/: test_health.py
(+96 files in other folders)
